[gd_scene load_steps=4 format=2]

[ext_resource path="res://06_resources/Sign/Sign.tscn" type="PackedScene" id=1]
[ext_resource path="res://02_scripts/Day1.gd" type="Script" id=2]
[ext_resource path="res://03_assets/button.png" type="Texture" id=3]

[node name="Day" type="Control"]
margin_right = 83.0002
margin_bottom = 89.9997
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -7.62939e-06
focus_mode = 0
disabled = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Button/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 1

[node name="Sign" parent="Button" instance=ExtResource( 1 )]
margin_left = -28.9781
margin_top = 6.29959
margin_right = 480.022
margin_bottom = 198.3

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
